last last fix — no more overflow scroll to eliminate white border

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -42,7 +42,7 @@ li {
     grid-area: 1/1/2/3;
     
     height: 100px;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .likes {
